manifests/aws-lb-controller/IngressClass-alb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/instance: aws-load-balancer-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/version: v3.1.0
    helm.sh/chart: aws-load-balancer-controller-3.1.0
  name: alb
spec:
  controller: ingress.k8s.aws/alb
